# vvv

./: .gitignore  AI.md  README.md  conftest.py  howto_menu_item.md  howto_overlay_mode.md  howto_shortcuts.md  howto_sidebar_tab.md  pyproject.toml  readme_alternative.md  readme_dev.md  readme_dev_extraction.md  readme_dev_image_list.md  readme_dev_intensities.md  readme_dev_profile.md  readme_dev_reg.md  readme_dev_rendering.md  readme_dev_roi.md  readme_dev_session_notes.md  readme_dev_sync.md  readme_tools_image_types.md
.github/workflows/: create_wheel.yml
.pytest_config/: .vv_settings
dev_doc/: AI.md  PLUGINS.md
docs/: CONTOURS.md  PLUGIN_CHECKLIST.md  core_overview.md  howto_overlay_mode.md  howto_programmatic_screenshots.md  howto_sidebar_tab.md  plugin_architecture.md  plugin_contours.md  plugin_dicom.md  plugin_dvf.md  plugin_image_list.md  plugin_intensity.md  plugin_profile.md  plugin_registration.md  plugin_roi.md  plugin_threshold.md  readme_dev.md  readme_dev_plugin_api_method.md  readme_dev_reg.md  readme_dev_viewstate_property.md
src/: test_3d_slice.py
src/vvv/: __init__.py  checkerboard.py  cli.py  cli_info.py  config.py  core.py  drawing.py  file_dialog.py  file_manager.py  geometry.py  (+21 more)
tests/: bench_fusion_modes.py  bench_fusion_roi.py  bench_rendering.py  bench_startup.py  conftest.py  readme_tests.md  temp.md  test_chaos_monkey.py  test_cli.py  test_drop.py  test_drop_linux.py  test_dvf.py  test_exception_safe_restore.py  test_gui.py  test_histogram.py  test_image_io.py  test_intensities.py  test_keyboard_navigation.py  test_mip_integration.py  test_mixed_features.py  test_plugin.py  test_plugin_api.py  test_profiles.py  test_registration.py  test_rename_docs.py  test_render_strategies.py  test_roi_alignment.py  test_screenshot.py  test_settings.py  test_ui_components.py  test_viewer.py
(+116 files in other folders)
