[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vvv"
version = "1.0"
description = "A Python-based 3D/4D image viewer inspired by VV."
requires-python = ">=3.9"
dependencies = [
    "click",
    "SimpleITK",
    "dearpygui",
    "numpy",
    "pytest",
    "setproctitle",
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
# This line creates the 'vvv' command in your shell
vvv = "vvv.cli:main"
checkerboard = "vvv.checkerboard:create_checkerboard"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]