[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vvv"
version = "1.0"
description = "A Python-based 3D/4D image viewer inspired by VV."
requires-python = ">=3.10"
dependencies = [
    "click",
    "SimpleITK",
    "dearpygui>=2.3.1",
    "numpy",
    "scikit-image",
    "pytest",
    "setproctitle",
    "pydicom",
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
    "fabio"
]

[project.optional-dependencies]
dev = [
    "pytest"
]
numba = [
    "numba"
]
memory = [
    "psutil"
]

[tool.setuptools.package-data]
"vvv" = ["fonts/*.otf"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
# This line creates the 'vvv' command in your shell
vvv = "vvv.cli:main"
vvv_image_info = "vvv.cli_info:main"
checkerboard = "vvv.checkerboard:create_checkerboard"

[tool.pytest.ini_options]
testpaths = ["tests", "src/vvv/plugins"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

